objects/APTS_PriceIT_Integration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting holds all PriceIT static strings, passwords, tokens etc</description>
    <fields>
        <fullName>APTS_Auth_Client_ID__c</fullName>
        <label>Auth Client ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_Client_Secret__c</fullName>
        <label>Auth Client Secret</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_Endpoint__c</fullName>
        <label>Auth Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_Grant_Type__c</fullName>
        <label>Auth Grant Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_JWT_Access_Token_1__c</fullName>
        <description>First part of Price.It  OAuth JWT access token is stored and reused from here.</description>
        <label>Auth JWT Access Token 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_JWT_Access_Token_2__c</fullName>
        <description>Second part of Price.It  OAuth JWT access token is stored and reused from here.</description>
        <label>Auth JWT Access Token 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_JWT_Access_Token_3__c</fullName>
        <description>Third part of Price.It  OAuth JWT access token is stored and reused from here.</description>
        <label>Auth JWT Access Token 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_Password__c</fullName>
        <label>Auth Password</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_Scope__c</fullName>
        <label>Auth Scope</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auth_Username__c</fullName>
        <label>Auth Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TSPA_Endpoint__c</fullName>
        <description>This field is used to store endpoint for fetch the response from TSPA(Price.it)</description>
        <label>TSPA Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PriceIT Integration</label>
</CustomObject>